# rst-emulator-framework

./: .gitignore  LICENSE  README.md  dockerfile  pyproject.toml  setup.cfg
artemis/: jenkins_build.gradle
docs/: dev_doc.md
src/RSTemulator/: __main__.py
src/config/: TM4C123GH6PM.py  constants.py  emulation_config.py
src/emulator/: asm_emulator.py  unicorn_engine.py
src/fileloader/: asm.py
src/rst_testcase/: io_event.py  pre_condition.py  testcase.py  testsuite.py
src/rstutils/: rst_utils.py
testcases/: example.py
testfiles/: base.s  main.s  main2.s  main3.s  main4.s  test.c  test2.c
