[metadata]
name = RST Emulator
version = 0.1.0
description = A tool to emulate code snippets for ASM lab
long_description = file: README.md
long_description_content_type = text/markdown
author = Felix Schmidt
author_email = feli.schmidt@ostfalial.de
url = https://github.com/BuildersInc
classifiers =
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
package_dir =
    = src

install_requires =
    keystone-engine
    capstone
    unicorn
    junit-xml

[options.packages.find]
where = src
exclude =
    tests*

[options.extras_require]
dev =
    pytest
    black
    flake8